# exdev-gfx

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile.cross  README.md  voxelspace.info
assets/: fifth_height_map.pgm  first_height_map.pgm  fourth_height_map.pgm  second_height_map.pgm  sky.ppm  sky_lores.ppm  texture.ppm  third_height_map.pgm
cmake/: FindAMIGA_C2P.cmake  amiga-gcc.toolchain  morphos-ppc.toolchain
examples/: CMakeLists.txt  README_VOXELSPACE.md  julia_main.c  render_palette.c  test_3d.c  test_flip_vertical.c  test_graphics2d.c  test_logger.c  test_matrix.c  test_palette.c  test_sprite.c  test_vector3d.c  test_window.c  voxelspace.readme  voxelspace_main.c
tools/: CMakeLists.txt  convert_dat_to_ppm.c  convert_palette_to_jasc.c  convert_palette_to_pal.c  convert_palette_to_pgm.c  convert_pgm_to_dat.c  convert_ppm_to_dat.c  convert_to_8bit.c  halve_8bit.c  render_palette_to_pgm.c
